manifests/backend/backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend-nodeport
spec:
  type: NodePort 
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: nodejs-backend
  selector:
    app: nodejs-backend-app
