manifests/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend-service
  labels:
    app: nodejs-backend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-backend-app
